# photo-tools

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  SPEC.md  activate-cli.cmd  pyproject.toml  requirements.txt
.github/workflows/: test.yml
photo_tools/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  paths.py  s3_upload.py
photo_tools/metadata/: __init__.py  extract.py  markdown.py
tests/: conftest.py  markers.py  test_cli.py  test_extract.py  test_extract_mocked.py  test_markdown.py  test_paths.py  test_s3_upload.py
tests/fixtures/: sample_metadata.json
