[tool.poetry]
name = "photo-tools"
version = "0.1.0"
description = "CLI to extract photo metadata and generate markdown frontmatter"
readme = "README.md"
authors = []
packages = [{ include = "photo_tools" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12"
pyexiftool = ">=0.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-cov = ">=5"
pillow = ">=10"
piexif = ">=1.1"

[tool.poetry.scripts]
photo-tools = "photo_tools.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requires_exiftool: tests that need the exiftool binary installed",
]

[tool.coverage.run]
source = ["photo_tools"]
omit = ["photo_tools/__main__.py"]

[tool.coverage.report]
fail_under = 90
include = ["photo_tools/metadata/*", "photo_tools/paths.py"]
